--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A customizable terminal emulator with plugin system",
   "main": "dist/index.js",
   "scripts": {
-    "start": "ts-node src/index.ts",
-    "build": "tsc",
-    "dev": "ts-node-dev --respawn src/index.ts",
+    "start": "ts-node src/index.tsx",
+    "dev": "webpack serve --mode development",
+    "build": "webpack --mode production",
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint . --ext .ts",
@@ -21,15 +21,29 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@fontsource/fira-code": "^4.5.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.17.16",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
+    "css-loader": "^7.1.2",
     "eslint": "^8.56.0",
+    "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
+    "style-loader": "^4.0.0",
     "ts-jest": "^29.2.5",
+    "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0"
+  },
+  "dependencies": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   }
 }
